# mneme

./: .gitignore  .zellij.kdl  Cargo.toml  Justfile  LICENSE  README.md  bacon.toml  flake.nix  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: create-release.yml  publish-crate.yml  publish.yml  tests.yml
src/: command.rs  config.rs  delay.rs  error.rs  event.rs  event_store.rs  kurrent_adapter.rs  lib.rs
src/kurrent_adapter/: settings.rs  stream.rs
tests/: integration_tests.rs  kurrent_tests.rs  test_cases.rs
