[package]
name = "mneme"
version = "0.4.2"
authors = ["John Wilger <john@johnwilger.com>"]
edition = "2024"
description = "An event-sourcing library for Rust projects."
repository = "https://github.com/jwilger/mneme"
license = "MIT"
keywords = ["events", "event-sourcing", "cqrs", "eventstoredb", "kurrent"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
eventstore = "4.0"
futures = "0.3"
nutype = { version = "0.6", features = ["regex", "serde"] }
rand = { version = "0.9", features = ["small_rng"] }
getrandom = "0.3"
serde = { version = "1.0", features = ["derive", "unstable"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
uuid = { version = "1.13", features = ["v4", "serde"] }
tonic = "0.12"
